# BilimAI

./: .env  .gitignore  Dockerfile  README.md  db.sqlite3  docker-compose.yml  entrypoint.sh  gpt_config.py  gpt_test_config.py  links.py  manage.py  pyproject.toml  railway.json  vercel.json
api/: admin.py  models.py  serializers.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_alter_chathistory_chat_answer.py  0003_alter_chathistory_chat_answer.py  0004_alter_chathistory_chat_answer.py  0005_rename_created_data_chathistory_created_date.py
bilim_ai/: settings.py  urls.py  wsgi.py
courses/: courses.json
